@@ -18,6 +18,7 @@ import org.springframework.web.server.ResponseStatusException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -60,7 +61,7 @@ public class AudioAdController {
         return "ad-details";
     }
     private void addConstAttributesToModel(Model model){
-        List<State> stateList = Arrays.stream(State.values()).toList();
+        List<State> stateList = Arrays.stream(State.values()).collect(Collectors.toList());
         model.addAttribute("stateList",stateList);
         model.addAttribute("title","Sprzęt Audio");
         model.addAttribute("fragment_name","electronics-search-bar");
