@@ -20,6 +20,7 @@ import org.springframework.web.server.ResponseStatusException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -64,13 +65,13 @@ public class WomenClothesAdController {
         return "ad-details";
     }
     private void addConstAttributesToModel(Model model){
-        List<State> stateList = Arrays.stream(State.values()).toList();
+        List<State> stateList = Arrays.stream(State.values()).collect(Collectors.toList());
         model.addAttribute("stateList",stateList);
 
-        List<Size> sizeList = Arrays.stream(Size.values()).toList();
+        List<Size> sizeList = Arrays.stream(Size.values()).collect(Collectors.toList());
         model.addAttribute("sizeList",sizeList);
 
-        List<FashionBrand> brandList = Arrays.stream(FashionBrand.values()).toList();
+        List<FashionBrand> brandList = Arrays.stream(FashionBrand.values()).collect(Collectors.toList());
         model.addAttribute("brandList",brandList);
 
         model.addAttribute("title","Ubrania damskie");
