@@ -19,6 +19,7 @@ import org.springframework.web.server.ResponseStatusException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -64,10 +65,10 @@ public class FurnitureAdController {
     }
 
     private void addConstAttributesToModel(Model model){
-        List<State> stateList = Arrays.stream(State.values()).toList();
+        List<State> stateList = Arrays.stream(State.values()).collect(Collectors.toList());
         model.addAttribute("stateList",stateList);
 
-        List<FurnitureType> typeList = Arrays.stream(FurnitureType.values()).toList();
+        List<FurnitureType> typeList = Arrays.stream(FurnitureType.values()).collect(Collectors.toList());
         model.addAttribute("typeList",typeList);
 
         model.addAttribute("title","Meble");
