@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -43,7 +44,7 @@ public class AudioAdManagementController {
         List<CategoryDto> categories = categoryService.findAllCategories();
         model.addAttribute("categories",categories);
 
-        List<State> stateList = Arrays.stream(State.values()).toList();
+        List<State> stateList = Arrays.stream(State.values()).collect(Collectors.toList());
         model.addAttribute("stateList",stateList);
 
         TelephoneAdSaveDto adSaveDto = new TelephoneAdSaveDto();
