@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -43,10 +44,10 @@ public class FurnitureAdManagementController {
         List<CategoryDto> categories = categoryService.findAllCategories();
         model.addAttribute("categories",categories);
 
-        List<State> stateList = Arrays.stream(State.values()).toList();
+        List<State> stateList = Arrays.stream(State.values()).collect(Collectors.toList());
         model.addAttribute("stateList",stateList);
 
-        List<FurnitureType> typeList = Arrays.stream(FurnitureType.values()).toList();
+        List<FurnitureType> typeList = Arrays.stream(FurnitureType.values()).collect(Collectors.toList());
         model.addAttribute("typeList",typeList);
 
         FurnitureAdSaveDto adSaveDto = new FurnitureAdSaveDto();
