@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -43,10 +44,10 @@ public class MotorbikeAdManagementController {
         List<CategoryDto> categories = categoryService.findAllCategories();
         model.addAttribute("categories",categories);
 
-        List<State> stateList = Arrays.stream(State.values()).toList();
+        List<State> stateList = Arrays.stream(State.values()).collect(Collectors.toList());
         model.addAttribute("stateList",stateList);
 
-        List<MotorbikeBrand> brandList = Arrays.stream(MotorbikeBrand.values()).toList();
+        List<MotorbikeBrand> brandList = Arrays.stream(MotorbikeBrand.values()).collect(Collectors.toList());
         model.addAttribute("brandList",brandList);
 
         MotorbikeAdSaveDto adSaveDto = new MotorbikeAdSaveDto();
